src/MyListView.scss
@import 'src/_colors.scss';

.editTitleButtons {
    width: 240px;
    display: flex;
    justify-content: space-between;
    margin: .5em auto;
}
.share-list {
    max-width: 750px;
    margin:auto;
    background: #e3f9eb;
    padding: 10px 20px;
    border: 4px dashed $accent;
}

.copy-list-url {
    display: flex; 
    justify-content: space-between; 
    align-items: center;
    flex-direction: column;

}

/* On screens that are 992px or less, set the background color to blue */
@media screen and (min-width: 600px) {
    .copy-list-url {
        flex-direction: row;
    }
  }

.list-url {
    font-family: monospace;
    font-size: 15px;
    word-break: break-all;
}
.add-item {
    max-width: 600px;
    margin: auto;
    margin-top: 20px;
    display:flex;
    flex-direction: column;
}
.add-item label {
    margin:auto;
}
    
.empty-wishlist {
    text-align: center;
    margin-bottom:40px;
}


.list {
	display:flex;
    flex-direction:column;
    padding: .5rem;
}

.list ol {
    max-width: 600px;
    min-width: 300px;
    margin: auto;
    padding-left: 0;
}
.list ol .item-description {
    font-family: 'Caveat', cursive;
    font-size:32px;
}

.item-description--bought{
    text-decoration: line-through
}

.list ol li {
    margin: 30px 20px;
    padding-bottom: 20px;
}
ol li > span {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: first baseline;
}

button svg {
    height: auto;width: 32px;text-align: center;vertical-align: middle
}

label.mark {
 font-family:'Open Sans';
 margin: 0 0 1rem 0;
 cursor:pointer;
}

.label.mark.item-bought-by-you {
    color: $accent;
}

.label.mark.item-bought-by-someoneelse {
    color: $primraryGrey;
}

